<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_detail_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:elevation="1dp" />

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_sheet_dialog">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/primaryTextColor"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/label_age"/>

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="18sp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_detail_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_detail_age"
                        android:textSize="18sp"
                        android:textAlignment="textEnd"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/label_address"/>

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="18sp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_detail_address"
                        android:textSize="18sp"
                        android:textAlignment="textEnd"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/label_gender"/>

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="18sp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_detail_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_male"
                        android:textSize="18sp"
                        android:textAlignment="textEnd"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/label_birthdate"/>

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="18sp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_detail_birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_detail_birthdate"
                        android:textSize="18sp"
                        android:textAlignment="textEnd"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/label_major"/>

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="18sp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_detail_major"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_detail_major"
                        android:textSize="18sp"
                        android:textAlignment="textEnd"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/label_study_program"/>

                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="18sp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_detail_study_program"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_detail_study"
                        android:textSize="18sp"
                        android:textAlignment="textEnd"/>

                </LinearLayout>

                <View
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_text_edit"
                        android:id="@+id/btn_detail_edit"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"/>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/holo_red_dark"
                        android:text="@string/btn_text_delete"
                        android:id="@+id/btn_detail_delete"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
