<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:minWidth="300dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/bg_custom_dialog"
    android:gravity="center"
    tools:override="true">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/ic_warning"
        android:contentDescription="@string/desc_confirm_info"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_confirm"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/primaryTextColor"/>

    <View
        style="@style/horizontal_divider"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_delete"
            android:backgroundTint="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_text_delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_text_cancel" />

    </LinearLayout>

</LinearLayout>