<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/bg_custom_dialog"
    android:gravity="center"
    android:minWidth="300dp"
    android:orientation="vertical"
    tools:override="true">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/ic_info"
        android:contentDescription="@string/desc_confirm_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_error_date"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp" />

    <View style="@style/horizontal_divider" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_ok" />


</LinearLayout>