<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_green_gradient"
    tools:context=".SuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
        android:gravity="center">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/ic_ok"
        android:contentDescription="@string/desc_image_successfull"/>

    <TextView
        android:id="@+id/tv_message_success"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_success_delete"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textColor="@android:color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok_success_delete"
        android:backgroundTint="#FF2EC1E8"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/btn_text_ok"/>

    </LinearLayout>

</ScrollView>